# dive-into-ghc

./: README.md
01-pipeline/: Main.hs  README.md  dive.cabal
02-parser/: Example.hs  Main.hs  README.md  stack.yaml
03-core/: .gitignore  Main.hs  README.md  dive.cabal
