name:                 dive
version:              0.1
license:              MIT
license-file:         LICENSE
author:               Stephen Diehl
copyright:            (c) Stephen Diehl
category:             Documentation
build-type:           Simple
cabal-version:        >= 1.10
stability:            experimental

executable dive
  main-is: Main.hs

  default-language:
    Haskell2010

  build-depends:
      base      >= 4.5 && < 4.10
    , mtl       >= 2.2 && <2.3
    , ghc       >= 7.8 && <8.0
    , ghc-paths >= 0.1 && <0.2
    , haskeline >= 0.7 && <0.8
